--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.27\n",
+    "version 1.3.4.28\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -96,6 +96,9 @@
     "    * video hur [petscan sparql fungerar](https://youtu.be/hOIOc3SKKW4) \n",
     "    * en:Wikipedia sidor som saknar mall [Template:SKBL](https://en.wikipedia.org/wiki/Template:SKBL) [petscan 17154918](https://petscan.wmflabs.org/?psid=17154918)\n",
     "    \n",
+    "#### Women in Red - en:Wikipedia\n",
+    "SKBL är nu en \"del\" av [Women in red](https://en.wikipedia.org/wiki/Women_in_Red) dvs. ett projekt för att skapa fler artiklar om kvinnor på WIkipedia och där vi nu lagt in SKBL med en diff mellan vad som finns i Wikidata och vilka kvinnor som har en artikel se [WikiProject_Women_in_Red/Missing_articles_by_dictionary](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Women_in_Red/Missing_articles_by_dictionary/BDSW) \n",
+    "    \n",
     "### ru:Wikipedia\n",
     "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
     "ryska WIkipedia har varit rel enkla att lyfta in Wikidata egenskaper dom har idag [länk visningar](https://stats.wikimedia.org/v2/#/ru.wikipedia.org) 806 M visningar per månad så det kan vara ett spännande möte\n",
@@ -140,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +373,7 @@
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +442,7 @@
        "Index: []"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -473,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -542,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -551,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
