Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -98,6 +98,13 @@
     "    \n",
     "#### Women in Red - en:Wikipedia\n",
     "SKBL är nu en \"del\" av [Women in red](https://en.wikipedia.org/wiki/Women_in_Red) dvs. ett projekt för att skapa fler artiklar om kvinnor på WIkipedia och där vi nu lagt in SKBL med en diff mellan vad som finns i Wikidata och vilka kvinnor som har en artikel se [WikiProject_Women_in_Red/Missing_articles_by_dictionary](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Women_in_Red/Missing_articles_by_dictionary/BDSW) \n",
+    "\n",
+    "Det här innebär \n",
+    "1. En ny artikel skapas i SKBL\n",
+    "2. Vi kör denna Notebook och ser en diff mellan Wikidata <-> SKBL\n",
+    "3. Skapar Wikidata objektet (helst även det automatiskt men det kräver \"bättre\" data från SKBL \n",
+    "4. Listan uppdateras hos Women in Red varje dag och då dyker denna post upp på den listan\n",
+    "5. Kör vi Petscan frågor så kan vi se om mall SKBL eller annan mall saknas på en:Wikipedia / sv:Wikipedia\n",
     "    \n",
     "### ru:Wikipedia\n",
     "video om hur [Wikipedia och olika språkversioner fungerar](https://youtu.be/GzJfXsdmfeU)\n",
