Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -13,6 +13,8 @@
     "    *  1450 WD <-> SKBL 20/08/2020\n",
     "      * WD items sorterade efter [antal egenskaper i WD](https://w.wiki/aB5) \n",
     "        * sorterade efter [sitelinks](https://w.wiki/a7i)\n",
+    "      * SKBL [\"kvinnor\" i Wikidata](https://w.wiki/aQJ) \n",
+    "      * SBL [antal kvinnor i Wikidata]()\n",
     "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
     "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
     "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9wN )\n",
@@ -24,6 +26,10 @@
     "    * deltagit i [Olympiska spel](https://tinyurl.com/ybpnrrgm)  \n",
     "    * finns på [Spotify](https://w.wiki/a6j)  \n",
     "    * finns på [SVT Öppen kanal](https://w.wiki/a6m)  \n",
+    "    * koppling [Digitaltmuseum idag via P1248](https://w.wiki/aUU)\n",
+    "      * saknar Digitaltmuseum men har VIAF\n",
+    "      * kopplingar Digitaltmuseum [sv:Wikipedia](https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%C3%A5n_Digitaltmuseum) samma [en:Wikipedia](https://en.wikipedia.org/wiki/Category:Digitaltmuseum_template_using_Wikidata_property_P1248)\n",
+    "      * [video](https://youtu.be/d-uaYgZPFsc) om detta \n",
     "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6q)\n",
     "      * vilka som skrev motioner [ihop med en person i SKBL](https://w.wiki/a6r) (som WD vet om)\n",
     "      * verktyget Scholia som används för citation graphs men fungerar för riksdagspersoner ex. [scholia.toolforge.org Anna Lind](https://scholia.toolforge.org/author/Q208591)\n",
