Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.28\n",
+    "version 1.3.4.29\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -27,7 +27,7 @@
     "    * finns på [Spotify](https://w.wiki/a6j)  \n",
     "    * finns på [SVT Öppen kanal](https://w.wiki/a6m)  \n",
     "    * koppling [Digitaltmuseum idag via P1248](https://w.wiki/aUU)\n",
-    "      * saknar Digitaltmuseum men har VIAF\n",
+    "      * saknar [Kulturnav P1248 men har VIAF](https://w.wiki/aUm)\n",
     "      * kopplingar Digitaltmuseum [sv:Wikipedia](https://sv.wikipedia.org/wiki/Kategori:Wikipediaartiklar_med_identifierare_fr%C3%A5n_Digitaltmuseum) samma [en:Wikipedia](https://en.wikipedia.org/wiki/Category:Digitaltmuseum_template_using_Wikidata_property_P1248)\n",
     "      * [video](https://youtu.be/d-uaYgZPFsc) om detta \n",
     "    * motioner skrivna i Riksdagen [av en kvinna på SKBL](https://w.wiki/a6q)\n",
