--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.30\n",
+    "version 1.3.4.29\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -194,9 +194,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1517 entries, 0 to 1516\n",
+      "RangeIndex: 1519 entries, 0 to 1518\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1517 non-null object\n",
+      "skblid    1519 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 12.0+ KB\n"
      ]
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -235,9 +235,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1388 entries, 538 to 817\n",
+      "Int64Index: 1390 entries, 539 to 818\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1388 non-null object\n",
+      "skblid    1390 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 21.7+ KB\n"
      ]
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -382,11 +382,11 @@
       "text/plain": [
        "both          1388\n",
        "left_only       63\n",
-       "right_only       0\n",
+       "right_only       2\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -445,17 +445,27 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1451</th>\n",
+       "      <td>AlmaAndersson</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1452</th>\n",
+       "      <td>MartaLindqvist</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [skblid, _merge]\n",
-       "Index: []"
+       "              skblid      _merge\n",
+       "1451   AlmaAndersson  right_only\n",
+       "1452  MartaLindqvist  right_only"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -474,12 +484,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 0 entries\n",
+      "Int64Index: 2 entries, 1451 to 1452\n",
       "Data columns (total 2 columns):\n",
-      "skblid    0 non-null object\n",
-      "_merge    0 non-null category\n",
+      "skblid    2 non-null object\n",
+      "_merge    2 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 104.0+ bytes\n"
+      "memory usage: 138.0+ bytes\n"
      ]
     }
    ],
@@ -489,15 +499,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  antal poster\n",
-      "Ingen fil skapas inga nya poster\n"
+      "2  antal poster\n"
      ]
     }
    ],
@@ -558,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -590,6 +599,13 @@
     "#SKBLnew_left.write(SKBLnew_left, unsafe_allow_html=True)\n",
     "#SKBLnew_left"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
