--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon \n",
-    "version 1.3.4.29\n",
+    "version 1.3.4.30\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -13,8 +13,8 @@
     "    *  1450 WD <-> SKBL 20/08/2020\n",
     "      * WD items sorterade efter [antal egenskaper i WD](https://w.wiki/aB5) \n",
     "        * sorterade efter [sitelinks](https://w.wiki/a7i)\n",
-    "      * SKBL [\"kvinnor\" i Wikidata](https://w.wiki/aQJ) \n",
-    "      * SBL [antal kvinnor i Wikidata]()\n",
+    "      * SKBL [antal \"kvinnor\" i Wikidata](https://w.wiki/aQJ) = 1453 starta 2018\n",
+    "      * SBL [antal kvinnor i Wikidata](https://w.wiki/aWE) = 518 har jobbar i 100 år\n",
     "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
     "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
     "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9wN )\n",
