Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -13,8 +13,8 @@
     "    *  1450 WD <-> SKBL 20/08/2020\n",
     "      * WD items sorterade efter [antal egenskaper i WD](https://w.wiki/aB5) \n",
     "        * sorterade efter [sitelinks](https://w.wiki/a7i)\n",
-    "      * SKBL [antal \"kvinnor\" i Wikidata](https://w.wiki/aQJ) = 1453 starta 2018\n",
-    "      * SBL [antal kvinnor i Wikidata](https://w.wiki/aWE) = 518 har jobbar i 100 år\n",
+    "      * SKBL [antal \"kvinnor\" i Wikidata](https://w.wiki/aQJ) = 1453 startade skapa biografier år 2018\n",
+    "      * SBL [antal kvinnor i Wikidata](https://w.wiki/aWE) = 518 har jobbar i 100 år med detta start år 1918\n",
     "  * Wikidata [1451 SKBL 21/08/2020](https://w.wiki/a4w )\n",
     "    * antal språk WIkipedia har åtminstone [en artikel om en kvinna på SKBL = 144](https://w.wiki/a4z)\n",
     "    * andra externa WD [egenskaper där SKBL finns](https://w.wiki/9wN )\n",
