--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,10 +5,12 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon part 1\n",
-    "version 1.3.4.30\n",
+    "version 1.3.4.30 \n",
+    "\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
-    "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) / [part2](http://localhost:8888/notebooks/Documents/GitHub/open-data-examples/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb)\n"
+    "** [del 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb)\n",
+    "* Wikidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n"
    ]
   },
   {
