--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +69,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1520 entries, 0 to 1519\n",
+      "RangeIndex: 1523 entries, 0 to 1522\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1520 non-null object\n",
+      "skblid    1523 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 12.0+ KB\n"
      ]
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -110,11 +110,11 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1391 entries, 539 to 818\n",
+      "Int64Index: 1394 entries, 541 to 820\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1391 non-null object\n",
+      "skblid    1394 non-null object\n",
       "dtypes: object(1)\n",
-      "memory usage: 21.7+ KB\n"
+      "memory usage: 21.8+ KB\n"
      ]
     }
    ],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 210,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 211,
    "metadata": {},
    "outputs": [
     {
@@ -151,9 +151,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1454 entries, 0 to 1453\n",
+      "RangeIndex: 1455 entries, 0 to 1454\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1454 non-null object\n",
+      "skblid    1455 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 212,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 213,
    "metadata": {},
    "outputs": [
     {
@@ -210,9 +210,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1454 entries, 0 to 1453\n",
+      "RangeIndex: 1455 entries, 0 to 1454\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1454 non-null object\n",
+      "skblid    1455 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 214,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 215,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,19 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          1391\n",
+       "both          1392\n",
        "left_only       63\n",
-       "right_only       0\n",
+       "right_only       2\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 169,
+     "execution_count": 216,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 218,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 219,
    "metadata": {},
    "outputs": [
     {
@@ -320,17 +320,27 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1455</th>\n",
+       "      <td>BengtaEskilsson</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1456</th>\n",
+       "      <td>IdaAmaliavonPlomgren</td>\n",
+       "      <td>right_only</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [skblid, _merge]\n",
-       "Index: []"
+       "                    skblid      _merge\n",
+       "1455       BengtaEskilsson  right_only\n",
+       "1456  IdaAmaliavonPlomgren  right_only"
       ]
      },
-     "execution_count": 172,
+     "execution_count": 219,
      "metadata": {},
      "output_type": "execute_result"
     }
