--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 221,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +359,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 0 entries\n",
+      "Int64Index: 2 entries, 1455 to 1456\n",
       "Data columns (total 2 columns):\n",
-      "skblid    0 non-null object\n",
-      "_merge    0 non-null category\n",
+      "skblid    2 non-null object\n",
+      "_merge    2 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 104.0+ bytes\n"
+      "memory usage: 138.0+ bytes\n"
      ]
     }
    ],
@@ -374,15 +374,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0  antal poster\n",
-      "Ingen fil skapas inga nya poster\n"
+      "2  antal poster\n"
      ]
     }
    ],
@@ -435,19 +434,107 @@
     "        dict_writer = csv.DictWriter(SKBLfile, keys)\n",
     "        dict_writer.writeheader()\n",
     "        dict_writer.writerows(listNewItems)\n",
+    "\n",
+    "    dfSKBLcsv = pd.read_csv(\"SKBL_newfile.csv\", sep=\",\")   \n",
+    "    \n",
     "else:\n",
     "    print (\"Ingen fil skapas inga nya poster\") \n",
-    "            \n",
-    "    "
+    "            \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 223,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>birthdate</th>\n",
+       "      <th>deathdate</th>\n",
+       "      <th>birthparish</th>\n",
+       "      <th>deathparish</th>\n",
+       "      <th>ISNI</th>\n",
+       "      <th>SKBL</th>\n",
+       "      <th>index</th>\n",
+       "      <th>skbl_status</th>\n",
+       "      <th>firstname</th>\n",
+       "      <th>lastname</th>\n",
+       "      <th>subtitle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>('1836-06-16',)</td>\n",
+       "      <td>1923-01-02</td>\n",
+       "      <td>Hammarlunda församling</td>\n",
+       "      <td>Lunds stadsförsamling</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BengtaEskilsson</td>\n",
+       "      <td>1455</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>/Bengta/</td>\n",
+       "      <td>Eskilsson</td>\n",
+       "      <td>Textilkonstnär, vävlärare</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>('1870-09-09',)</td>\n",
+       "      <td>1960-03-26</td>\n",
+       "      <td>Livgardet till häst församling</td>\n",
+       "      <td>Hedvig Eleonora församling</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IdaAmaliavonPlomgren</td>\n",
+       "      <td>1456</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>/Ida/ Amalia</td>\n",
+       "      <td>von Plomgren</td>\n",
+       "      <td>Fäktare, kvinnosakskvinna, skribent</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         birthdate   deathdate                     birthparish  \\\n",
+       "0  ('1836-06-16',)  1923-01-02          Hammarlunda församling   \n",
+       "1  ('1870-09-09',)  1960-03-26  Livgardet till häst församling   \n",
+       "\n",
+       "                  deathparish  ISNI                  SKBL  index skbl_status  \\\n",
+       "0       Lunds stadsförsamling   NaN       BengtaEskilsson   1455          OK   \n",
+       "1  Hedvig Eleonora församling   NaN  IdaAmaliavonPlomgren   1456          OK   \n",
+       "\n",
+       "      firstname      lastname                             subtitle  \n",
+       "0      /Bengta/     Eskilsson            Textilkonstnär, vävlärare  \n",
+       "1  /Ida/ Amalia  von Plomgren  Fäktare, kvinnosakskvinna, skribent  "
+      ]
+     },
+     "execution_count": 223,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#dfmerge"
+    "dfSKBLcsv"
    ]
   },
   {
