Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -374,13 +374,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "<class 'tuple'>\n",
+      "2020-08-29\n",
+      "<class 'tuple'>\n",
+      "2020-08-29\n",
       "2  antal poster\n"
      ]
     }
@@ -396,10 +400,18 @@
     "    \n",
     "    new_item = dict()\n",
     "    try:\n",
+    "        publishedDate = data['publication_date'],\n",
+    "        print (type( publishedDate))\n",
+    "        print (publishedDate[0])\n",
+    "        \n",
+    "    except:\n",
+    "        publishedDate =\"\"\n",
+    "    new_item['publishedDate'] = publishedDate[0]\n",
+    "    try:\n",
     "        birthdate = data['lifespan']['from']['date']['date'],\n",
     "    except:\n",
     "        birtdate =\"\"\n",
-    "    new_item['birthdate'] = birthdate\n",
+    "    new_item['birthdate'] = birthdate[0]\n",
     "    try:\n",
     "        deathdate = data['lifespan']['to']['date']['date']\n",
     "    except:\n",
@@ -444,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -468,6 +480,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>publishedDate</th>\n",
        "      <th>birthdate</th>\n",
        "      <th>deathdate</th>\n",
        "      <th>birthparish</th>\n",
@@ -484,7 +497,8 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>('1836-06-16',)</td>\n",
+       "      <td>2020-08-29</td>\n",
+       "      <td>1836-06-16</td>\n",
        "      <td>1923-01-02</td>\n",
        "      <td>Hammarlunda församling</td>\n",
        "      <td>Lunds stadsförsamling</td>\n",
@@ -498,7 +512,8 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>('1870-09-09',)</td>\n",
+       "      <td>2020-08-29</td>\n",
+       "      <td>1870-09-09</td>\n",
        "      <td>1960-03-26</td>\n",
        "      <td>Livgardet till häst församling</td>\n",
        "      <td>Hedvig Eleonora församling</td>\n",
@@ -515,9 +530,9 @@
        "</div>"
       ],
       "text/plain": [
-       "         birthdate   deathdate                     birthparish  \\\n",
-       "0  ('1836-06-16',)  1923-01-02          Hammarlunda församling   \n",
-       "1  ('1870-09-09',)  1960-03-26  Livgardet till häst församling   \n",
+       "  publishedDate   birthdate   deathdate                     birthparish  \\\n",
+       "0    2020-08-29  1836-06-16  1923-01-02          Hammarlunda församling   \n",
+       "1    2020-08-29  1870-09-09  1960-03-26  Livgardet till häst församling   \n",
        "\n",
        "                  deathparish  ISNI                  SKBL  index skbl_status  \\\n",
        "0       Lunds stadsförsamling   NaN       BengtaEskilsson   1455          OK   \n",
@@ -528,7 +543,7 @@
        "1  /Ida/ Amalia  von Plomgren  Fäktare, kvinnosakskvinna, skribent  "
       ]
      },
-     "execution_count": 223,
+     "execution_count": 238,
      "metadata": {},
      "output_type": "execute_result"
     }
