Update Svenskt Kvinnobiografiskt lexikon.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 240,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +69,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1523 entries, 0 to 1522\n",
+      "RangeIndex: 1525 entries, 0 to 1524\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1523 non-null object\n",
+      "skblid    1525 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 12.0+ KB\n"
      ]
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -110,9 +110,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1394 entries, 541 to 820\n",
+      "Int64Index: 1396 entries, 542 to 821\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1394 non-null object\n",
+      "skblid    1396 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 21.8+ KB\n"
      ]
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 245,
    "metadata": {},
    "outputs": [
     {
@@ -151,9 +151,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1455 entries, 0 to 1454\n",
+      "RangeIndex: 1457 entries, 0 to 1456\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1455 non-null object\n",
+      "skblid    1457 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 246,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 247,
    "metadata": {},
    "outputs": [
     {
@@ -210,9 +210,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1455 entries, 0 to 1454\n",
+      "RangeIndex: 1457 entries, 0 to 1456\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1455 non-null object\n",
+      "skblid    1457 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 215,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,19 +249,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          1392\n",
+       "both          1394\n",
        "left_only       63\n",
        "right_only       2\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 216,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 218,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 219,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [
     {
@@ -321,13 +321,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>1455</th>\n",
-       "      <td>BengtaEskilsson</td>\n",
+       "      <th>1457</th>\n",
+       "      <td>EsterGill</td>\n",
        "      <td>right_only</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1456</th>\n",
-       "      <td>IdaAmaliavonPlomgren</td>\n",
+       "      <th>1458</th>\n",
+       "      <td>HildaAugustaTonning</td>\n",
        "      <td>right_only</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -335,12 +335,12 @@
        "</div>"
       ],
       "text/plain": [
-       "                    skblid      _merge\n",
-       "1455       BengtaEskilsson  right_only\n",
-       "1456  IdaAmaliavonPlomgren  right_only"
+       "                   skblid      _merge\n",
+       "1457            EsterGill  right_only\n",
+       "1458  HildaAugustaTonning  right_only"
       ]
      },
-     "execution_count": 219,
+     "execution_count": 253,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 221,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2 entries, 1455 to 1456\n",
+      "Int64Index: 2 entries, 1457 to 1458\n",
       "Data columns (total 2 columns):\n",
       "skblid    2 non-null object\n",
       "_merge    2 non-null category\n",
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 256,
    "metadata": {},
    "outputs": [
     {
@@ -498,52 +498,52 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>2020-08-29</td>\n",
-       "      <td>1836-06-16</td>\n",
-       "      <td>1923-01-02</td>\n",
-       "      <td>Hammarlunda församling</td>\n",
-       "      <td>Lunds stadsförsamling</td>\n",
+       "      <td>1893-06-12</td>\n",
+       "      <td>1981-02-25</td>\n",
+       "      <td>Älvdalens församling</td>\n",
+       "      <td>Matteus församling</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>BengtaEskilsson</td>\n",
-       "      <td>1455</td>\n",
+       "      <td>EsterGill</td>\n",
+       "      <td>1457</td>\n",
        "      <td>OK</td>\n",
-       "      <td>/Bengta/</td>\n",
-       "      <td>Eskilsson</td>\n",
-       "      <td>Textilkonstnär, vävlärare</td>\n",
+       "      <td>/Ester/ Johanna</td>\n",
+       "      <td>Gill</td>\n",
+       "      <td>Konstnär, serietecknare</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2020-08-29</td>\n",
-       "      <td>1870-09-09</td>\n",
-       "      <td>1960-03-26</td>\n",
-       "      <td>Livgardet till häst församling</td>\n",
-       "      <td>Hedvig Eleonora församling</td>\n",
+       "      <td>1857-08-14</td>\n",
+       "      <td>1932-08-11</td>\n",
+       "      <td>Lunds stadsförsamling</td>\n",
+       "      <td>Ronneby landsförsamling</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>IdaAmaliavonPlomgren</td>\n",
-       "      <td>1456</td>\n",
+       "      <td>HildaAugustaTonning</td>\n",
+       "      <td>1458</td>\n",
        "      <td>OK</td>\n",
-       "      <td>/Ida/ Amalia</td>\n",
-       "      <td>von Plomgren</td>\n",
-       "      <td>Fäktare, kvinnosakskvinna, skribent</td>\n",
+       "      <td>Hilda /Augusta/</td>\n",
+       "      <td>Tonning</td>\n",
+       "      <td>Rösträttskvinna, lärare</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  publishedDate   birthdate   deathdate                     birthparish  \\\n",
-       "0    2020-08-29  1836-06-16  1923-01-02          Hammarlunda församling   \n",
-       "1    2020-08-29  1870-09-09  1960-03-26  Livgardet till häst församling   \n",
+       "  publishedDate   birthdate   deathdate            birthparish  \\\n",
+       "0    2020-08-29  1893-06-12  1981-02-25   Älvdalens församling   \n",
+       "1    2020-08-29  1857-08-14  1932-08-11  Lunds stadsförsamling   \n",
        "\n",
-       "                  deathparish  ISNI                  SKBL  index skbl_status  \\\n",
-       "0       Lunds stadsförsamling   NaN       BengtaEskilsson   1455          OK   \n",
-       "1  Hedvig Eleonora församling   NaN  IdaAmaliavonPlomgren   1456          OK   \n",
+       "               deathparish  ISNI                 SKBL  index skbl_status  \\\n",
+       "0       Matteus församling   NaN            EsterGill   1457          OK   \n",
+       "1  Ronneby landsförsamling   NaN  HildaAugustaTonning   1458          OK   \n",
        "\n",
-       "      firstname      lastname                             subtitle  \n",
-       "0      /Bengta/     Eskilsson            Textilkonstnär, vävlärare  \n",
-       "1  /Ida/ Amalia  von Plomgren  Fäktare, kvinnosakskvinna, skribent  "
+       "         firstname lastname                 subtitle  \n",
+       "0  /Ester/ Johanna     Gill  Konstnär, serietecknare  \n",
+       "1  Hilda /Augusta/  Tonning  Rösträttskvinna, lärare  "
       ]
      },
-     "execution_count": 238,
+     "execution_count": 256,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [],
    "source": [
