--- a/Svenskt Kvinnobiografiskt lexikon.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon.ipynb
@@ -5,11 +5,12 @@
    "metadata": {},
    "source": [
     "# Svenskt Kvinnobiografiskt lexikon part 1\n",
-    "version 1.3.4.32\n",
+    "version 1.3.4.33\n",
     "\n",
     "\n",
     "* Denna [Jupityr Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) \n",
     "  * [del 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb) med sökfrågor etc.\n",
+    "  * [del 3](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) hämtar data\n",
     "* Video om detta [svenska](https://www.youtube.com/watch?v=_LP48Yf6vgI) / [engelska](https://www.youtube.com/watch?v=wolyLu0WVsA)  \n",
     "* Wikidata - [An introduction to Wikidata](https://www.youtube.com/watch?v=m_9_23jXPoE)\n",
     "  * SKBL WIkidata property [P4963](https://www.wikidata.org/wiki/Property_talk:P4963) \n",
@@ -31,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 306,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 307,
    "metadata": {},
    "outputs": [
     {
@@ -69,9 +70,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1525 entries, 0 to 1524\n",
+      "RangeIndex: 1526 entries, 0 to 1525\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1525 non-null object\n",
+      "skblid    1526 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 12.0+ KB\n"
      ]
@@ -83,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 308,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 309,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 310,
    "metadata": {},
    "outputs": [
     {
@@ -110,9 +111,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 1396 entries, 542 to 821\n",
+      "Int64Index: 1397 entries, 542 to 821\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1396 non-null object\n",
+      "skblid    1397 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 21.8+ KB\n"
      ]
@@ -126,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 311,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 312,
    "metadata": {},
    "outputs": [
     {
@@ -151,9 +152,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1457 entries, 0 to 1456\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1457 non-null object\n",
+      "skblid    1460 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -193,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 313,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 247,
+   "execution_count": 314,
    "metadata": {},
    "outputs": [
     {
@@ -210,9 +211,9 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 1457 entries, 0 to 1456\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
       "Data columns (total 1 columns):\n",
-      "skblid    1457 non-null object\n",
+      "skblid    1460 non-null object\n",
       "dtypes: object(1)\n",
       "memory usage: 11.5+ KB\n"
      ]
@@ -224,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 248,
+   "execution_count": 315,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 316,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -249,19 +250,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 317,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "both          1394\n",
+       "both          1397\n",
        "left_only       63\n",
-       "right_only       2\n",
+       "right_only       0\n",
        "Name: _merge, dtype: int64"
       ]
      },
-     "execution_count": 250,
+     "execution_count": 317,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -273,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 318,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 319,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -291,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 320,
    "metadata": {},
    "outputs": [
     {
@@ -320,27 +321,17 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1457</th>\n",
-       "      <td>EsterGill</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1458</th>\n",
-       "      <td>HildaAugustaTonning</td>\n",
-       "      <td>right_only</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   skblid      _merge\n",
-       "1457            EsterGill  right_only\n",
-       "1458  HildaAugustaTonning  right_only"
+       "Empty DataFrame\n",
+       "Columns: [skblid, _merge]\n",
+       "Index: []"
       ]
      },
-     "execution_count": 253,
+     "execution_count": 320,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 321,
    "metadata": {},
    "outputs": [
     {
@@ -359,12 +350,12 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "Int64Index: 2 entries, 1457 to 1458\n",
+      "Int64Index: 0 entries\n",
       "Data columns (total 2 columns):\n",
-      "skblid    2 non-null object\n",
-      "_merge    2 non-null category\n",
+      "skblid    0 non-null object\n",
+      "_merge    0 non-null category\n",
       "dtypes: category(1), object(1)\n",
-      "memory usage: 138.0+ bytes\n"
+      "memory usage: 104.0+ bytes\n"
      ]
     }
    ],
@@ -374,18 +365,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 322,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'tuple'>\n",
-      "2020-08-29\n",
-      "<class 'tuple'>\n",
-      "2020-08-29\n",
-      "2  antal poster\n"
+      "0  antal poster\n",
+      "Ingen fil skapas inga nya poster\n"
      ]
     }
    ],
@@ -400,10 +388,7 @@
     "    \n",
     "    new_item = dict()\n",
     "    try:\n",
-    "        publishedDate = data['publication_date'],\n",
-    "        print (type( publishedDate))\n",
-    "        print (publishedDate[0])\n",
-    "        \n",
+    "        publishedDate = data['publication_date'],        \n",
     "    except:\n",
     "        publishedDate =\"\"\n",
     "    new_item['publishedDate'] = publishedDate[0]\n",
@@ -456,7 +441,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 290,
    "metadata": {},
    "outputs": [
     {
@@ -497,53 +482,35 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2020-08-29</td>\n",
-       "      <td>1893-06-12</td>\n",
-       "      <td>1981-02-25</td>\n",
-       "      <td>Älvdalens församling</td>\n",
-       "      <td>Matteus församling</td>\n",
+       "      <td>2020-08-30</td>\n",
+       "      <td>1894-10-21</td>\n",
+       "      <td>1986-01-05</td>\n",
+       "      <td>Kristina församling</td>\n",
+       "      <td>Allhelgona församling</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>EsterGill</td>\n",
-       "      <td>1457</td>\n",
+       "      <td>SigridSynnergren</td>\n",
+       "      <td>1459</td>\n",
        "      <td>OK</td>\n",
-       "      <td>/Ester/ Johanna</td>\n",
-       "      <td>Gill</td>\n",
-       "      <td>Konstnär, serietecknare</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-08-29</td>\n",
-       "      <td>1857-08-14</td>\n",
-       "      <td>1932-08-11</td>\n",
-       "      <td>Lunds stadsförsamling</td>\n",
-       "      <td>Ronneby landsförsamling</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>HildaAugustaTonning</td>\n",
-       "      <td>1458</td>\n",
-       "      <td>OK</td>\n",
-       "      <td>Hilda /Augusta/</td>\n",
-       "      <td>Tonning</td>\n",
-       "      <td>Rösträttskvinna, lärare</td>\n",
+       "      <td>/Sigrid/ Birgitta</td>\n",
+       "      <td>Synnergren</td>\n",
+       "      <td>Textilkonstnär, kyrkokonstnär, rektor</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  publishedDate   birthdate   deathdate            birthparish  \\\n",
-       "0    2020-08-29  1893-06-12  1981-02-25   Älvdalens församling   \n",
-       "1    2020-08-29  1857-08-14  1932-08-11  Lunds stadsförsamling   \n",
+       "  publishedDate   birthdate   deathdate          birthparish  \\\n",
+       "0    2020-08-30  1894-10-21  1986-01-05  Kristina församling   \n",
        "\n",
-       "               deathparish  ISNI                 SKBL  index skbl_status  \\\n",
-       "0       Matteus församling   NaN            EsterGill   1457          OK   \n",
-       "1  Ronneby landsförsamling   NaN  HildaAugustaTonning   1458          OK   \n",
+       "             deathparish  ISNI              SKBL  index skbl_status  \\\n",
+       "0  Allhelgona församling   NaN  SigridSynnergren   1459          OK   \n",
        "\n",
-       "         firstname lastname                 subtitle  \n",
-       "0  /Ester/ Johanna     Gill  Konstnär, serietecknare  \n",
-       "1  Hilda /Augusta/  Tonning  Rösträttskvinna, lärare  "
+       "           firstname    lastname                               subtitle  \n",
+       "0  /Sigrid/ Birgitta  Synnergren  Textilkonstnär, kyrkokonstnär, rektor  "
       ]
      },
-     "execution_count": 256,
+     "execution_count": 290,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 275,
    "metadata": {},
    "outputs": [],
    "source": [
