Update Svenskt Kvinnobiografiskt lexikon part 3.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1242,7 +1242,7 @@
        "[50 rows x 12 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1250,7 +1250,8 @@
    "source": [
     "from IPython.display import display, HTML  \n",
     "plotPublishedAuthor['Link'] = plotPublishedAuthor['skblid'].apply(lambda x: \"https://skbl.se/sv/artikel/{0}\".format(x))  \n",
-    "plotPublishedAuthor.sort_values(by=['publishedDate'], ascending=[False])[:50]"
+    "plotPublishedAuthor.style.set_properties(subset=['publishedDate'], **{'width': '200px'}) \n",
+    "plotPublishedAuthor.sort_values(by=['publishedDate'], ascending=[False])[:50]\n"
    ]
   },
   {
