Update Svenskt Kvinnobiografiskt lexikon part 3.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -11,6 +11,8 @@
     "* this [Jupyter Notebook](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%203.ipynb) \n",
     "  * [part 1](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon.ipynb) check Wikidata and SKBL\n",
     "  * [part 2](https://github.com/salgo60/open-data-examples/blob/master/Svenskt%20Kvinnobiografiskt%20lexikon%20part%202.ipynb) more queries etc.\n",
+    "* [video](https://www.youtube.com/watch?v=6jxH8MBIhvg) in Swedish about how SKBL deliver and work with Wikidata\n",
+    "  * Exempel hur projektet Women in Red på en:Wikipedia autiomatiskt [skapar lista](https://en.wikipedia.org/wiki/Wikipedia:WikiProject_Women_in_Red/Missing_articles_by_dictionary/BDSW) med vad som finns i SKBL men inte i en:Wikipedia\n",
     "  "
    ]
   },
