Update Svenskt Kvinnobiografiskt lexikon part 3.ipynb

--- a/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
+++ b/Svenskt Kvinnobiografiskt lexikon part 3.ipynb
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +452,7 @@
        "      <td>/Barbro/ Kerstin Elisabet</td>\n",
        "      <td>SKBL</td>\n",
        "      <td>Anna-Malin Karlsson</td>\n",
-       "      <td>https://skbl.se/sv/artikel/BarbroKerstinElisab...</td>\n",
+       "      <td>https://skbl.se/sv/artikel/BarbroKerstinElisabetSoderberg</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -462,7 +462,7 @@
        "      <td>Jan</td>\n",
        "      <td>Thomasson</td>\n",
        "      <td>Provinsialläkare, pionjär, kvinnosakskvinna</td>\n",
-       "      <td>Pioneering district medical officer, proponent...</td>\n",
+       "      <td>Pioneering district medical officer, proponent of women&amp;apos;s issues</td>\n",
        "      <td>Lindstén</td>\n",
        "      <td>/Marianne/ Charlotta</td>\n",
        "      <td>SKBL</td>\n",
@@ -482,7 +482,7 @@
        "      <td>Clara Natalia /Teresia/</td>\n",
        "      <td>SKBL</td>\n",
        "      <td>Ulrika Jannert Kallenberg</td>\n",
-       "      <td>https://skbl.se/sv/artikel/ClaraNataliaTeresia...</td>\n",
+       "      <td>https://skbl.se/sv/artikel/ClaraNataliaTeresiaEuren</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -536,8 +536,8 @@
        "      <td>2020-09-03</td>\n",
        "      <td>Camilla</td>\n",
        "      <td>Bergvall</td>\n",
-       "      <td>Hovfunktionär, pionjär inom svenska Röda Korse...</td>\n",
-       "      <td>Court functionary, pioneer within the Swedish ...</td>\n",
+       "      <td>Hovfunktionär, pionjär inom svenska Röda Korset, kompositör</td>\n",
+       "      <td>Court functionary, pioneer within the Swedish Red Cross, composer</td>\n",
        "      <td>Edholm</td>\n",
        "      <td>Lovisa (/Lotten/) Christina Charlotta</td>\n",
        "      <td>SKBL</td>\n",
@@ -567,7 +567,7 @@
        "      <td>Camilla</td>\n",
        "      <td>Bergvall</td>\n",
        "      <td>Godsägare, politiker, kvinnosakskvinna</td>\n",
-       "      <td>Property owner, politician, proponent of women...</td>\n",
+       "      <td>Property owner, politician, proponent of women&amp;apos;s issues</td>\n",
        "      <td>Fröberg</td>\n",
        "      <td>/Eva/ Maria</td>\n",
        "      <td>SKBL</td>\n",
@@ -594,22 +594,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                           skblid  ...                                               Link\n",
-       "0  BarbroKerstinElisabetSoderberg  ...  https://skbl.se/sv/artikel/BarbroKerstinElisab...\n",
-       "1                MarianneLindsten  ...        https://skbl.se/sv/artikel/MarianneLindsten\n",
-       "2        ClaraNataliaTeresiaEuren  ...  https://skbl.se/sv/artikel/ClaraNataliaTeresia...\n",
-       "3                   CarinWastberg  ...           https://skbl.se/sv/artikel/CarinWastberg\n",
-       "4                   MariaWidebeck  ...           https://skbl.se/sv/artikel/MariaWidebeck\n",
-       "5            SaraWennerbergReuter  ...    https://skbl.se/sv/artikel/SaraWennerbergReuter\n",
-       "6                    LottenEdholm  ...            https://skbl.se/sv/artikel/LottenEdholm\n",
-       "7                    BirgitCarell  ...            https://skbl.se/sv/artikel/BirgitCarell\n",
-       "8                      EvaFroberg  ...              https://skbl.se/sv/artikel/EvaFroberg\n",
-       "9                 GallieAkerhielm  ...         https://skbl.se/sv/artikel/GallieAkerhielm\n",
+       "                           skblid  ...                                                       Link\n",
+       "0  BarbroKerstinElisabetSoderberg  ...  https://skbl.se/sv/artikel/BarbroKerstinElisabetSoderberg\n",
+       "1                MarianneLindsten  ...                https://skbl.se/sv/artikel/MarianneLindsten\n",
+       "2        ClaraNataliaTeresiaEuren  ...        https://skbl.se/sv/artikel/ClaraNataliaTeresiaEuren\n",
+       "3                   CarinWastberg  ...                   https://skbl.se/sv/artikel/CarinWastberg\n",
+       "4                   MariaWidebeck  ...                   https://skbl.se/sv/artikel/MariaWidebeck\n",
+       "5            SaraWennerbergReuter  ...            https://skbl.se/sv/artikel/SaraWennerbergReuter\n",
+       "6                    LottenEdholm  ...                    https://skbl.se/sv/artikel/LottenEdholm\n",
+       "7                    BirgitCarell  ...                    https://skbl.se/sv/artikel/BirgitCarell\n",
+       "8                      EvaFroberg  ...                      https://skbl.se/sv/artikel/EvaFroberg\n",
+       "9                 GallieAkerhielm  ...                 https://skbl.se/sv/artikel/GallieAkerhielm\n",
        "\n",
        "[10 rows x 12 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,6 +620,8 @@
     "plotPublishedAuthor.style.set_properties(subset=['publishedDate'], **{'width': '200px'}) \n",
     "plotPublishedAuthor = plotPublishedAuthor.sort_values(by=['publishedDate'], ascending=[False])\n",
     "plotPublishedAuthor = plotPublishedAuthor.reset_index(drop=True)  \n",
+    "\n",
+    "# de sista 10 publiserade biografier \n",
     "plotPublishedAuthor[:10]"
    ]
   },
